--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>W.W</h1>
     <img src="./assets/images/smileface.png" height="100" alt="ww's photo" />
     <h2>Summary</h2>
-        <p>I have 18 years' experiences in software testing.</p>
+        <p>I have more than 10 years' experiences in software testing.</p>
     <hr />
     <h2>Education</h2>
         <ul>
@@ -65,7 +65,9 @@
             </li>
         </ul>
     <footer>
-
+        <small>
+            Copyright © W.W. All Rights Reserved.
+        </small>
     </footer>
   </body>
 </html>
